<resources>
    <string name="app_name">VenoApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="communication">커뮤니케이션</string>
    <string name="report">Report</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="login_complate">로그인 성공</string>
    <string name="signup_complate">회원가입 성공</string>
    <string name="find_account">계정 찾기</string>
    <string name="signup_email">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="logout_complate">로그아웃 성공</string>
    <string name="logout_fail">로그아웃 실패</string>
    <string name="login_fail_null">이메일과 비밀번호를 입력해 주세요</string>
    <string name="accoint_null">없는 계정입니다. 다시 확인해 주세요</string>
    <string name="signup_fail_null">빠진 부분 및 비밀번호가 일치하지 않습니다.</string>
    <string name="error_event">존재하지 않는 이벤트입니다. 개발자에게 문의 해 주세요</string>
    <string name="junbo">개인정보 약관 및 서비스, 이벤트성 약관 보기</string>
    <string name="document">게시글</string>
    <string name="nikname">닉네임</string>

    <string name="follow">팔로우</string>
    <string name="following">필로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <string name="alarm_favorite">님이 좋아요를 눌렀습니다.</string>
    <string name="alarm_who">&#160;</string>
    <string name="alarm_commet">&#186;메시지를 남겼습니다.</string>
    <string name="alarm_follow">님이 당신을 팔로우 하기 시작했습니다.</string>

    <string name="sand">보내기</string>

    <string name="upload_img">사진 올리기</string>
    <string name="hint_img_content">내용</string>
    <string name="upload_success">업로드 성공</string>
    <string name="upload_fail">업로드 실패</string>

    <string name="back">뒤로</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
</resources>
