<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/communication">
            <menu>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/document"
            android:title="@string/document" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
            </menu>
        </item>

    </group>

    <item android:title="@string/report">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/report"
                android:title="@string/report" />
            <item
                android:id="@+id/logout_button"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
