<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">


    <ProgressBar
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="회원가입은 이메일을 아이디로 사용합니다.
            \n회원가입시 개인정보 및 이벤트성 알림에 동의하는것으로 간주가 됩니다"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="19dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/email_signup"
            android:hint="@string/email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/nikname_signup"
                android:hint="@string/nikname"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password_signup"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:background="@color/background_color"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:id="@+id/signup"
            android:text="@string/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@color/background_color"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:text="@string/junbo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>

</RelativeLayout>